force-app/main/default/objects/Chat_365_Log__c.object
<CustomObject>
    <description>Log of all the chat into the system</description>
    <fields>
        <fullName>Account_Type_Text__c</fullName>
        <description>Account type in text</description>
        <formula>CASE(Account_Type__c,
            1, &quot;Student&quot;,
            2, &quot;Staff&quot;,
            &quot;Visitor&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <defaultValue>3</defaultValue>
        <description>1 - Student
            2 - Staff
            3 - Visitor</description>
        <inlineHelpText>1 - Student
            2 - Staff
            3 - Visitor</inlineHelpText>
        <label>Account Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bot_Name__c</fullName>
        <description>Name of source Chat Bot</description>
        <label>Bot Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Agent_Availability_Status__c</fullName>
        <description>Chat Agent Availability Status</description>
        <label>Chat Agent Availability Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Duration_seconds__c</fullName>
        <description>Chat Duration in Seconds</description>
        <formula>( Final_Interaction_Time__c  -  Initial_Interaction_Time__c ) *1440*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Duration (seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chat_Error__c</fullName>
        <description>Description of Chat Error</description>
        <label>Chat Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <description>Chat Key Unique Identifier</description>
        <label>Chat Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Chat_Log_Turns__c</fullName>
        <description>Chat Log Turns</description>
        <label>Chat Log Turns</label>
        <summaryForeignKey>Chat_365_Log_Detail__c.Chat_365_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact to which this Chat 365 Log relates</description>
        <inlineHelpText>The Contact (if any) whose Person ID (text) (if the Account Type is Student)
            or whose SAP Staff Id (if the Account Type is Staff) matches the Id Number of this Chat 365 Log</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>Course Selected by Student</description>
        <label>Course</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Case Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <description>Type of device that user used to access chatbot</description>
        <label>Device Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the customer</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feedback_Comment__c</fullName>
        <description>Feedback Comment</description>
        <label>Feedback Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Rating__c</fullName>
        <description>Feedback Rating</description>
        <label>Feedback Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Interaction_Time__c</fullName>
        <description>Final Interaction Time</description>
        <label>Final Interaction Time</label>
        <summarizedField>Chat_365_Log_Detail__c.CreatedDate</summarizedField>
        <summaryForeignKey>Chat_365_Log_Detail__c.Chat_365_Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of Customer</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Started_Step__c</fullName>
        <description>Get Started Step</description>
        <label>Get Started Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Number__c</fullName>
        <description>Student or Staff Id Number</description>
        <label>Id Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Interaction_Time__c</fullName>
        <description>Initial Interaction time</description>
        <label>Initial Interaction Time</label>
        <summarizedField>Chat_365_Log_Detail__c.CreatedDate</summarizedField>
        <summaryForeignKey>Chat_365_Log_Detail__c.Chat_365_Log__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Chat_Escalation__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Flag to determine whether case to be generated is from Chat Escalation or Online Submission</description>
        <label>Is Chat Escalation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the Customer</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Connection_Wait__c</fullName>
        <description>Live Agent Connection Wait</description>
        <label>Live Agent Connection Wait</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Status__c</fullName>
        <description>Live Chat Status</description>
        <label>Chat Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Abandoned/Declined</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Agent Disconnect</fullName>
                </value>
                <value>
                    <fullName>Chat Ended (Agent)</fullName>
                </value>
                <value>
                    <fullName>Chat Ended (User)</fullName>
                </value>
                <value>
                    <fullName>Connection Error</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live_Chat_Accept_Wait_Time__c</fullName>
        <description>Live Chat Accept Wait Time</description>
        <label>Live Chat Accept Wait Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <description>Page URL where Chatbot was invoked</description>
        <label>Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of the customer</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <description>Session Unique Id for the Conversation.</description>
        <externalId>true</externalId>
        <label>Session Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Contains Student Type</description>
        <label>Student Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Area__c</fullName>
        <description>Contains Study Area</description>
        <label>Study Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Case Subject</description>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Refer to the custom metadata - Case Category Skill Mappings (Field: Topic)
            for the list of possible values.</description>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Authenticated__c</fullName>
        <description>User Authentication Identifier</description>
        <label>User Authenticated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Number__c</fullName>
        <description>Contains VTAC Number</description>
        <label>VTAC Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Chat 365 Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chat_Key__c</columns>
        <columns>Session_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Bot_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Id_Number__c</columns>
        <columns>Is_Chat_Escalation__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Account_Type_Text__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TODAY_S_LOG</fullName>
        <columns>NAME</columns>
        <columns>Bot_Name__c</columns>
        <columns>Chat_Key__c</columns>
        <columns>Id_Number__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY&apos;S LOG</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000}</displayFormat>
        <label>Chat 365 Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat 365 Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>